force-app/main/default/objects/leankor__KanbanCardBaseline__c/leankor__KanbanCardBaseline__c.object-meta.xml
<CustomObject>
    <label>Kanban Card Baseline</label>
    <nameField>
        <displayFormat>KCB-{0000000000}</displayFormat>
        <label>Kanban Card Baseline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kanban Card Baselines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>