force-app/main/default/objects/leankor__KanbanCardBaseline__c/fields/leankor__DueDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__DueDateTime__c</fullName>
    <description>The deadline for the project or deliverable expressed as a date time.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the deadline for the project or deliverable as a date time.</inlineHelpText>
    <label>Due Date Time</label>
    <type>DateTime</type>
</CustomField>