force-app/main/default/objects/leankor__KanbanCardBaseline__c/fields/leankor__DurationUnit__c.field-meta.xml
<CustomField>
    <fullName>leankor__DurationUnit__c</fullName>
    <description>The unit of measure for the Estimated Duration value.</description>
    <inlineHelpText>Enter the unit of measure for the Estimated Duration value.</inlineHelpText>
    <label>Duration Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>