force-app/main/default/objects/leankor__KanbanCardBaseline__c/fields/leankor__IsCriticalPath__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsCriticalPath__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Path</label>
    <type>Checkbox</type>
</CustomField>