force-app/main/default/objects/leankor__KanbanCardBaseline__c/fields/leankor__KanbanCard__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Kanban card instance that includes this base line.</description>
    <inlineHelpText>Select the Kanban card which will include this base line.</inlineHelpText>
    <label>Kanban Card</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Kanban Card Baselines</relationshipLabel>
    <relationshipName>Kanban_Card_Baselines</relationshipName>
    <type>Lookup</type>
</CustomField>