force-app/main/default/objects/leankor__KanbanCardBaseline__c/fields/leankor__ProjectScheduleBaseline__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectScheduleBaseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Project Schedule Baseline instance that includes this  Kanban Card Baseline.</description>
    <inlineHelpText>Select theProject Schedule Baseline which will include this Kanban Card Baseline.</inlineHelpText>
    <label>Project Schedule Baseline</label>
    <referenceTo>leankor__ProjectScheduleBaseline__c</referenceTo>
    <relationshipLabel>Kanban Card Baselines</relationshipLabel>
    <relationshipName>Kanban_Card_Baselines</relationshipName>
    <type>Lookup</type>
</CustomField>