force-app/main/default/objects/leankor__KanbanCardBaseline__c/fields/leankor__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__StartDateTime__c</fullName>
    <description>The Start Date Time of the baseline  of the kanban card estimation.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Select start date time of the baseline of the assign work.</inlineHelpText>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>